--- a/public/style/main.css
+++ b/public/style/main.css
@@ -3,10 +3,15 @@ html,body{
 	padding: 0;
 	background: #CEDAE9;
 }
-
+.main-md-content{
+	background: transparent;
+}
 .card-background{
+	margin-top: 50px;
+	margin-bottom: 50px;
+}
+ng-view{
 	background: #79E1FF;
-	padding: 75px 10px;
 }
 
 .my-container{
@@ -58,10 +63,16 @@ html,body{
 }
 
 img.tile{
-	width: 100%;
+	width: 50em;
+    max-width: 100%;
 	height: 100%;
+
 }
 
 md-grid-list {
 	margin: auto;
 }
+.tile-name{
+	color: white;
+}
+
