--- a/public/views/myProfile.html
+++ b/public/views/myProfile.html
@@ -1,61 +1,66 @@
 <md-content class="md-padding card-background main-md-content" layout="column"  layout-align="center center">
-	<md-card layout="column" class="my-container md-whiteframe-5dp" >
+  <md-card layout="column" class="my-container md-whiteframe-5dp" >
 
-			<div layout-sm="column" layout="row"  class="card-header">
-				<div flex="33" flex-sm="100" >
-					<img ng-src="{{::gamService.me.avatar}}"/>
-				</div>
-				<div layout="column"  class="md-padding" layout-align-sm="center center"  >
-					<div inline key="displayName" class="md-display-2 display-name"></div>
-					<span class	="md-display-1 display-name">Software Developer </span>
-				</div>
-			</div>
-
-
-			<div class="md-padding " layout="row" layout-sm="column"  layout-align-sm="center center" >
-				<div layout="column" flex="95" class="contact-info-wrap">
-						<div class="contact-info">
-							<div inline key="phone"></div>
-							<div inline key="blog"></div>
-							<div inline key="company"></div>
-							<div inline key="email"></div>
-							<div inline key="hireable"></div>
-							<div inline key="location"></div>
-						</div>
-				</div>
-
-				<div class="vertical-line"></div>
-
-				<div class="contact-info" flex-gt-sm="10" layout="column"	 layout-sm="row" >
-					<a ng-href="{{::gamService.me.profileUrl}}"><span class="fa fa-github-square"></span> </a>
-					<a ng-href="{{::gamService.me.profileUrl}}"><span class="fa fa-github-square"></span> </a>
-					<a ng-href="{{::gamService.me.profileUrl}}"><span class="fa fa-github-square"></span> </a>
-				</div>
-
-			</div>
+      <div layout-sm="column" layout="row"  class="card-header">
+        <div flex="33" flex-sm="100" >
+          <img  ng-src="{{::user.avatar_url}}" alt="profile picture"/>
+        </div>
+        <div layout="column"  class="md-padding" layout-align-sm="center center">
+          <div>
+            <span inline key="name" class="md-display-2 display-name inline"></span>
+            <span class="md-display-2 display-name inline"> | </span>
+            <span inline key="username" class="md-display-2 display-name inline"></span>
+          </div>
+          <span class="md-display-1 display-name">Software Developer </span>
+          <div class="md-display-1 display-name"> 
+            {{user.public_repos }} Repos | {{ user.followers.length }} Followers | {{ user.following }} Following
+          </div>
+        </div>
+      </div>
 
 
-			<md-card-actions layout="row" layout-align="end center">
-				<span flex></span>
-				<md-button ng-show="gamService.showSaveBtn" 
-					class="md-warn md-raised" 
-					ng-click="update()"
-					aria-label="save button">
-					Update Profile
-				</md-button>
-				<md-button ng-show="true">Full Profile <i class="material-icons">expand_more</i></md-button>
-			</md-card-actions>
-	</md-card>
+      <div class="md-padding " layout="row" layout-sm="column"  layout-align-sm="center center" >
+        <div layout="column" flex="95" class="contact-info-wrap">
+            <div class="contact-info">
+              <div inline key="phone"></div>
+              <div inline key="blog"></div>
+              <div inline key="company"></div>
+              <div inline key="email"></div>
+              <div inline key="hireable"></div>
+              <div inline key="location"></div>
+            </div>
+        </div>
+
+        <div class="vertical-line"></div>
+
+        <div class="contact-info" flex-gt-sm="10" layout="column"  layout-sm="row" >
+          <a ng-href="{{::gamService.me.profileUrl}}"><span class="fa fa-github-square"></span> </a>
+          <a ng-href="{{::gamService.me.profileUrl}}"><span class="fa fa-github-square"></span> </a>
+          <a ng-href="{{::gamService.me.profileUrl}}"><span class="fa fa-github-square"></span> </a>
+        </div>
+
+      </div>
 
 
+      <md-card-actions layout="row" layout-align="end center">
+        <span flex></span>
+        <md-button ng-show="gamService.showSaveBtn" 
+          class="md-warn md-raised" 
+          ng-click="update()"
+          aria-label="save button">
+          Update Profile
+        </md-button>
+        <md-button ng-show="true">Full Profile <i class="material-icons">expand_more</i></md-button>
+      </md-card-actions>
+  </md-card>
 
 </md-content >
 
 <div class="card-background md-padding">
 	<md-content flex class="my-container md-padding md-whiteframe-5dp" layout="column">
-		<div class="md-display-1"	>{{::gamService.me.username | uppercase}}'s Repositories </div>
+		<div class="md-display-1"	>{{::user.username | uppercase}}'s Repositories </div>
 		<br>
-		<div ng-repeat="repo in ::gamService.me.repos" flex  layout="column">
+		<div ng-repeat="repo in ::user.repos" flex  layout="column">
 			<md-divider ></md-divider>
 			<p class="md-headline">
 				<a ng-href="{{::repo.svn_url}}">{{::repo.name}}</a>
@@ -73,7 +78,7 @@
 
 <div class="card-background md-padding" ng-cloak>
 	<md-content class="md-padding my-container md-whiteframe-5dp ">
-		<div class="md-display-1">{{::gamService.me.username | uppercase}}'s Followers </div>
+		<div class="md-display-1">{{::user.username | uppercase}}'s Followers </div>
 		<md-divider ></md-divider>
 		<br>
 	    <md-grid-list
@@ -82,7 +87,7 @@
 	           md-cols-sm="2" md-cols-md="4" md-cols-gt-md="5"
 	           md-row-height-gt-md="1:1" md-row-height="1:1"
 	           md-gutter="12px" md-gutter-gt-sm="8px" >
-	       <md-grid-tile  ng-repeat="follow in ::gamService.me.followers" 
+	       <md-grid-tile  ng-repeat="follow in user.followers" 
 	           md-rowspan="1" md-colspan="1" md-colspan-sm="1">
 	           <a class="tile-name" ng-href="#profile/{{::follow.login}}">
 		           <img class="tile" ng-src="{{::follow.avatar_url}}" />
