--- a/public/views/inline.html
+++ b/public/views/inline.html
@@ -1,14 +1,18 @@
-<span ng-if="value === '' || value" ng-mouseLeave="editMode(1)" ng-mouseEnter="editMode(1)">
-
+<!-- ngif - show if TextValue exist or if TextValue is blank -->
+<!-- ng-mouseLeave/ng-mouseEnter- enable/disable edit mode when entering  -->
+<span ng-if="TextValue === '' || TextValue" ng-mouseLeave="editMode(1)" ng-mouseEnter="editMode(1)">
+	<!--if  editMode[1] is false/true hide/show icon -->
 	<i ng-show="!editMode[1] && icon" class="material-icons info-icons ">{{::icon}}</i>
 	<i ng-show="editMode[1] && icon" class="material-icons info-edit">edit</i>
+	
+	<!-- TextValue can be number, website, email -->
+	<span class="my-input" ng-show="!editMode[1]" >{{TextValue}}</span>
 
-	<span class="my-input" ng-show="!editMode[1]" >{{value}}</span>
-
+	<!-- form and input to change value  -->
 	<form ng-show="editMode[1]" name="myForm" novalidate class="contact-info inline">
-		<div class="inline" ng-mouseleave="updateGam(key)">
+		<div class="inline" ng-mouseleave="updateOcto(key)">
 			<input  name="user{{key}}" 
-				type="text" ng-model="value"
+				type="text" ng-model="TextValue"
 				ng-mouseleave="saveBtn(myForm['user'+key].$dirty)">
 		</div>
 	</form>
