--- a/public/views/index.html
+++ b/public/views/index.html
@@ -49,8 +49,8 @@
 		</div>
 
 
-		<script src="/js/gamModule.js" type="text/javascript" charset="utf-8"></script>
-		<script src="/js/gamService.js" type="text/javascript" charset="utf-8"></script>
+		<script src="/js/octoModule.js" type="text/javascript" charset="utf-8"></script>
+		<script src="/js/octoService.js" type="text/javascript" charset="utf-8"></script>
 		<script src="/js/indexController.js" type="text/javascript" charset="utf-8"></script>
 		<script src="/js/myProfileController.js" type="text/javascript" charset="utf-8"></script>
 		<script src="/js/otherProfileController.js" type="text/javascript" charset="utf-8"></script>
