Moving inline directive

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -51,6 +51,7 @@
 
 		<script src="/js/octoModule.js" type="text/javascript" charset="utf-8"></script>
 		<script src="/js/octoService.js" type="text/javascript" charset="utf-8"></script>
+		<script src="/js/inlineDirective.js" type="text/javascript" charset="utf-8"></script>
 		<script src="/js/indexController.js" type="text/javascript" charset="utf-8"></script>
 		<script src="/js/myProfileController.js" type="text/javascript" charset="utf-8"></script>
 		<script src="/js/otherProfileController.js" type="text/javascript" charset="utf-8"></script>
