Removing Console logs

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -40,7 +40,8 @@
 		    	class="md-padding" layout="column" 
 		    	ng-if="octo.me.error"
 		    	layout-align="start center">
-		    	<h1>Sign In Using GitHub</h1> 
+		    	<h1>Welcome to OctoDex!</h1> 
+		    	<h1>An online vitual profile for Github Users</h1> 
 		    	<md-button class="md-raised md-primary" ng-click="logger()">
 		    	  {{signInBtn}}
 		    	</md-button>
