Cleaner inline directive

--- a/public/views/inline.html
+++ b/public/views/inline.html
@@ -1,15 +1,17 @@
 <!-- ngif - show if TextValue exist or if TextValue is blank -->
 <!-- ng-mouseLeave/ng-mouseEnter- enable/disable edit mode when entering  -->
-<span ng-if="TextValue === '' || TextValue" ng-mouseLeave="editMode(1)" ng-mouseEnter="editMode(1)">
-	<!--if  editMode[1] is false/true hide/show icon -->
-	<i ng-show="!editMode[1] && icon" class="material-icons info-icons ">{{::icon}}</i>
-	<i ng-show="editMode[1] && icon" class="material-icons info-edit">edit</i>
+
+<span ng-if="TextValue === '' || TextValue" ng-click="editMode(true)"   ng-mouseLeave="iconToggle(1)" ng-mouseEnter="iconToggle(1)">
+	<!--if  showIcon is false/true hide/show icon -->
+	<i ng-show="!showIcon && icon" class="material-icons info-icons ">{{::icon}}</i>
+	<i ng-show="showIcon && icon" class="material-icons info-edit">edit</i>
+	<!-- <i ng-show="showIcon && icon" class="material-icons info-edit">done</i> -->
 	
 	<!-- TextValue can be number, website, email -->
-	<span class="my-input" ng-show="!editMode[1]" >{{TextValue}}</span>
+	<span class="my-input" ng-show="!showInput" >{{TextValue}}</span>
 
 	<!-- form and input to change value  -->
-	<form ng-show="editMode[1]" name="myForm" novalidate class="contact-info inline">
+	<form ng-show="showInput" name="myForm" ng-click="editMode(true)" novalidate class="contact-info inline">
 		<div class="inline" ng-mouseleave="updateOcto(key)">
 			<input  name="user{{key}}" 
 				type="text" ng-model="TextValue"
