--- a/public/views/inline.html
+++ b/public/views/inline.html
@@ -1,22 +1,22 @@
-<!-- ngif - show if TextValue exist or if TextValue is blank -->
+<!-- ngif - show if textValue exist or if textValue is blank -->
 <!-- ng-mouseLeave/ng-mouseEnter- enable/disable edit mode when entering  -->
 
-<span ng-if="TextValue === '' || TextValue" ng-click="toggleInput(true)"   ng-mouseLeave="toggleIcon(1)" ng-mouseEnter="toggleIcon(1)">
+<span ng-if="textValue === '' || textValue" ng-click="toggleInput(true)"   ng-mouseLeave="toggleIcon(1)" ng-mouseEnter="toggleIcon(1)">
 
 	<!--if  iconVisability is false/true hide/show icon -->
 	<i ng-show="!iconVisability && icon" class="material-icons info-icons ">{{icon}}</i>
 	<i ng-show="iconVisability && icon && !myForm['user'+key].$dirty" class="material-icons info-edit">edit</i>
 	<!-- <i ng-show=" icon && inlineForm['user'+key].$dirty" class="material-icons info-edit">clear</i> -->
 
-	<!-- TextValue can be number, website, email -->
-	<span class="my-input" ng-show="!inputVisability" >{{TextValue}}</span>
+	<!-- textValue can be number, website, email -->
+	<span class="my-input" ng-show="!inputVisability" >{{user[key]}}</span>
 
 	<!-- form and input to change value  -->
 	<form ng-show="inputVisability"     name="inlineForm" 
 		  ng-mouseleave="toggleInput(false)"  novalidate class="contact-info inline">
-		<div class="inline" ng-mouseleave="updateOcto(key)">
+		<div class="inline" >
 			<input name="user{{key}}" 
-				   type="text" ng-model="TextValue"
+				   type="text" ng-model="user[key]"
 				   ng-mouseleave="showSaveBtn(inlineForm['user'+key].$dirty)">
 		</div>
 	</form>
