--- a/public/views/myProfile.html
+++ b/public/views/myProfile.html
@@ -47,7 +47,7 @@
         <span flex></span>
         <md-button ng-show="octo.showSaveBtn" 
           class="md-warn md-raised" 
-          ng-click="update()"
+          ng-click="updateUser()"
           aria-label="save button">
           Update Profile
         </md-button>
