Fixing View isues

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -33,7 +33,7 @@
 
 		  <md-content layout-fill layout="column">
 		  	<!-- Rendered View will go inside of ng-view -->
-		    <ng-view ng-if="!octo.me.error"></ng-view>
+		    <ng-view flex ng-if="!octo.me.error"></ng-view>
 		    <!-- If not signed in "octo.me.error" show the following  -->
 		    <md-content 
 		    	layout-fill	
